--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -13,7 +13,7 @@ body, html {
     max-width: 800px;
     border: 3px solid rgb(253, 114, 172);
     margin-left: 20%;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
     margin-right: 50%;
 }
 
@@ -48,7 +48,7 @@ body, html {
 
 .card-body {
     margin: 25px;
-    border: 10px solid rgb(67, 196, 247);;
+    border: 7px solid rgb(67, 196, 247);;
 }
 
 #more-recipes {
@@ -69,4 +69,8 @@ body, html {
 #search-jumbotron {
     text-align: center;
     margin-top: 25px;
+}
+
+.navbar {
+    opacity: 0.65;
 }
