Added styling for quiz. Continued to work on quiz functionality.

--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -2,3 +2,14 @@
     background: pink;
     border: 1px red;
 }
+
+html, body {
+    height: 100%;
+    width: 100%;
+}
+
+.jumbotron {
+    opacity: 0.6;
+    width: 90%;
+    margin: 0 auto;
+}
