Added ability to save favorites for each user to firebase. Added functionality for no duplicate usernames. Added message to display if username exists or not.

--- a/assets/css/favorites.css
+++ b/assets/css/favorites.css
@@ -54,3 +54,9 @@ body, html {
     width: 50%;
     color: white;
 }
+
+#username-message {
+    margin-top: 20px;
+    color: red;
+    font-size: 12px;
+}
