--- a/assets/css/favorites.css
+++ b/assets/css/favorites.css
@@ -7,7 +7,7 @@ body, html {
 
 #favorite-recipes {
     width: 100%;
-    height: 700px;
+    /* height: 700px; */
     background-color: rgb(247, 106, 101);
     opacity: 0.9;;
 }
@@ -55,7 +55,7 @@ body, html {
     color: white;
 }
 
-#username-message {
+#username-message, #temp-save-message {
     margin-top: 20px;
     color: red;
     font-size: 12px;
